--- a/.htaccess
+++ b/.htaccess
@@ -63,67 +63,7 @@ FileETag none
 
 # These lines disable ETags and FileETags, which can reduce unnecessary HTTP requests.
 
-# protect wpconfig.php
-<files wp-config.php>
-order allow,deny
-deny from all
-</files>
-
-# These lines restrict access to the wp-config.php file, which contains sensitive configuration information for WordPress.
-
-# protect the htaccess file
-<files .htaccess>
-order allow,deny
-deny from all
-</files>
-
-# These lines restrict access to the .htaccess file itself, which is a crucial part of your server's configuration.
-
-# Directory listing protection
-Options -Indexes
-
-# Block AI to use the blog data. From Dark Visitors robots.txt
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/anthropic-ai
-
-User-agent: anthropic-ai
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/bytespider
-
-User-agent: Bytespider
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/ccbot
-
-User-agent: CCBot
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/facebookbot
-
-User-agent: FacebookBot
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/google-extended
-
-User-agent: Google-Extended
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/gptbot
-
-User-agent: GPTBot
-Disallow: /
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/omgili
-
-User-agent: omgili
-Disallow: /
-
-# This line disables directory listing, preventing users from viewing the contents of directories without an index file.
+# Forbid AI Crawlers
+RewriteEngine On
+RewriteCond %{HTTP_USER_AGENT} (anthropic-ai|Bytespider|CCBot|ChatGPT-User|FacebookBot|GPTBot|Omgilibot) [NC]
+RewriteRule ^ – [F]
